Fixed issue with long urls in description stretching site in mobile version

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -28,6 +28,10 @@
     float: none
 }
 
+.jobBlock {
+    word-wrap: break-word;
+}
+
 .jobBlock, .pagination {
     margin-top: 35px;
 }
